# jq-jit

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  STATUS.md  THIRD-PARTY-LICENSES.md  build.rs
.github/workflows/: add-to-project.yml  ci.yml  release.yml
bench/: comprehensive.sh  euler.sh  generate_data.sh  pgo-build.sh  run.sh  update_history.py
benches/: compare.sh  jq_jit_bench.rs  usecase.sh
docs/: README.md  benchmark-history.md  benchmark-history.tsv  benchmark.md  development-story.md  human-instructions.md  insights.md  maintenance.md  team-playbook.md  usecase-benchmark.md
docs/plan/: README.md  aot-record.md  aot.md  cache-record.md  cache.md  roadmap-record.md  roadmap.md  streaming-record.md  streaming.md  usecase.md
docs/research/: backtracking.md  cranelift.md  design-decisions.md  existing-impls.md  jit-backends.md  jq-bytecode.md
src/: aot.rs  bytecode.rs  cache.rs  codegen.rs  compiler.rs  cps_ir.rs  eval.rs  fast_path.rs  input.rs  interpreter.rs  ir.rs  jit.rs  jq_ffi.rs  jq_runner.rs  lib.rs  main.rs  module.rs  output.rs  parser.rs  runtime.rs  value.rs  vm.rs
tests/: README.md  compat.sh  compat_official.rs  compat_regression.rs  contract_fast_path.rs  contract_value_factories.rs  corpus_diff.rs  coverage_fast_path.allowlist  coverage_fast_path.rs  diff_corpus.rs  diff_scenarios.rs  differential.rs  differential_proptest.rs  enforce_value_factories.allowlist  enforce_value_factories.rs  fast_path_contract.rs  fast_path_coverage.allowlist  fast_path_coverage.rs  fast_path_error_wrap_proptest.rs  fuzz_diff.rs  fuzz_error_wrap.rs  fuzz_full.rs  fuzz_restricted.rs  jit_vs_interp.rs  official.rs  regression.test  selfdiff_jit_interp.rs  value_factory_enforcement.allowlist  value_factory_enforcement.rs
tests/common/: diff_harness.rs  jq_test_format.rs  json_normalize.rs  mod.rs
tests/corpus/: 01-filter-project.jq  01-filter-project.json  02-group-by-aggregate.jq  02-group-by-aggregate.json  03-flatten-paths.jq  03-flatten-paths.json  04-rename-keys.jq  04-rename-keys.json  05-k8s-container-images.jq  05-k8s-container-images.json  06-log-error-extract.jq  06-log-error-extract.json  07-recursive-find.jq  07-recursive-find.json  08-reduce-running-sum.jq  08-reduce-running-sum.json  09-conditional-merge.jq  (+7 more)
(+6 files in other folders)
