[package]
name = "jq-jit2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A JIT-compiling implementation of jq using Cranelift"
repository = "https://github.com/m5d215/jq-jit"
authors = ["m5d215"]

[dependencies]
cranelift-codegen = "0.129"
cranelift-frontend = "0.129"
cranelift-jit = "0.129"
cranelift-module = "0.129"
cranelift-native = "0.129"
anyhow = "1"
regex = "1"
libm = "0.2"
libc = "0.2"
serde_json = "1"
indexmap = "2"
ahash = "0.8"
itoa = "1"
compact_str = "0.9.0"

[[bin]]
name = "jq-jit2"
path = "src/bin/jq-jit2.rs"
